--- a/AluraPlus2D-main/index.html
+++ b/AluraPlus2D-main/index.html
@@ -5,15 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <title>Alura Plus</title>
 </head>
 
 <body>
     <section class="container principal">
-        <div>
-            <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-            <img src="./img/Combo.png" alt="O combo Alura Plus">
+        <div class="container-caixa">
+            <h1 class="container-titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="./img/Combo.png" alt="O combo Alura Plus" class="container-imagem">
             <a href="www.alura.com.br" class="container-botao">Assine por 12x de R$120,00*</a>
+            <a href="www.alura.com.br" class="container-botao botao-secundario">Assinar somente o Alura+</a>
+            <p class="container-aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <img src="./img/Pixel.png" alt="Um monitor com AluraPlus aberto"
+        class="imagem-secundaria">
+        <div class="container-descricao">
+            <h2 class="descricao-titulo">Assista do seu jeito</h2>
+            <p class="descricao-texto">Aproveite a tela grande da TV
+            ou assista no tablet, laptop, celular e outros aparelhos.
+            Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+    <section class="container terceiro">
+       
+        <div class="container-descricao">
+            <p class="descricao-texto2">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br" class="container-botao tres">Assine o combo+</a>
+        </div>
+        <img src="./img/Telas.png" alt="Telas com Aluraplus aberto"
+        class="imagem-tres">
+    </section>
+    <section class="container secundario">
+        <img src="./img/Notebook.png" alt="Um notebook"
+        class="imagem-quatro">
+        <div class="container-descricao">
+            <h2 class="descricao-titulo3">Baixe seu cursos</h2>
+            <p class="descricao-texto3">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
         </div>
     </section>
 </body>
