<li>                 <img src="./img/computador.png alt="incone de televisão">                 <h3 class="lista-item">computador</h3>             </li>

--- a/AluraPlus2D-main/index.html
+++ b/AluraPlus2D-main/index.html
@@ -31,22 +31,42 @@
             Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
-    <section class="container terceiro">
-       
+    <section class="container secundario">
         <div class="container-descricao">
-            <p class="descricao-texto2">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-            <a href="www.alura.com.br" class="container-botao tres">Assine o combo+</a>
+            <p class="descricao-texto">Só o Combo+ oferece Alura+
+                e Alura Língua juntos para você ter acesso
+                a cursos de diversas áreas da tecnologia e
+                aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br" class="container-botao secundario-botao">Assinar o Combo+</a>
         </div>
-        <img src="./img/Telas.png" alt="Telas com Aluraplus aberto"
-        class="imagem-tres">
+        <img src="./img/Telas.png" alt="Tela da AluraPlus" class="imagem-secundaria">
     </section>
     <section class="container secundario">
-        <img src="./img/Notebook.png" alt="Um notebook"
-        class="imagem-quatro">
+        <img src="./img/Notebook.png" alt="Notebook com ALura"
+        class="imagem-secundaria">
         <div class="container-descricao">
-            <h2 class="descricao-titulo3">Baixe seu cursos</h2>
-            <p class="descricao-texto3">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            <h2 class="descricao-titulo">Baixe seus cursos</h2>
+            <p class="descricao-texto">Baixe e assista quando
+                e onde quiser. Assim, seus favoritos estão sempre
+                com você, até mesmo sem internet.</p>
         </div>
+    </section>
+    <section class="dispositivos">
+        <h2 class="dispositivos-titulo"> Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos-lista">
+            <li>
+                <img src="./img/tv.png" alt="incone de televisão">
+                <h3 class="lista-item">TV</h3>
+            </li>
+            <li>
+                <img src="./img/computador.png "alt="incone de televisão">
+                <h3 class="lista-item">Computadores</h3>
+            </li>
+            <li>
+                <img src="./img/celular.png"alt="incone de televisão">
+                <h3 class="lista-item">Celulares e tablets</h3>
+            </li>
+        </ul>
     </section>
 </body>
 
